# onchain-agent-backend

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  agent.db  alembic.ini  cdp_api_key.example.json  constants.py  docker-compose.yml  fly.toml  index.py  pyproject.toml  render.yaml  test_db.py  test_wallet.py  utils.py  wallet_credentials.example.json
.github/workflows/: ci-cd.yml
agent/: handle_agent_action.py  initialize_agent.py  run_agent.py
agent/custom_actions/: get_latest_block.py
db/: nfts.py  setup.py  tokens.py  wallet.py
middleware/: authentication.py
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: generate_wallet.py  manage_wallet.py
src/agent_backend/: config.py  constants.py  index.py  schemas.py  utils.py
src/agent_backend/agent/: handle_agent_action.py  initialize_agent.py  run_agent.py  tools.py
src/agent_backend/db/: config.py  models.py  nfts.py  setup.py  tokens.py  wallet.py  wallets.py
tests/: conftest.py  test_api.py
